# loan-churn-prediction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: fitted_scalers.joblib  minmax_scaler.pkl
tasks/Final Submission/: Final Project Presentation Dackers.pptx  Notulen Mentoring Dackers (All Stage).pptx  SMOTE_Stage_4_Dackers.ipynb
tasks/Stage 0/: Stage 0 - Notulen Mentoring Dackers.pptx
tasks/Stage 1/: Stage 1 - Dackers.ipynb  Stage 1 - Notulen Mentoring Dackers.pptx
tasks/Stage 2/: Stage 2 - Notulen Mentoring Dackers.pptx
tasks/Stage 3/: Stage 3 - Notulen Mentoring Dackers.pptx
tasks/Stage 4/: Stage 4 - Notulen Mentoring Dackers.pptx
utils/: feature_definitions.py  preprocessing.py
