[project]
name = "loan-prediction-based-on-costumer-behaviour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]
